Removed sticky categories due scroll bug, adjusted z-indexes

--- a/src/content.css
+++ b/src/content.css
@@ -4,7 +4,7 @@
     width: 100vw;
     height: 100%;
     pointer-events: none;
-    z-index: 20;
+    z-index: 101;
     background: rgba(255, 255, 255, 0.9);
     display: none;
     justify-content: center;
@@ -60,7 +60,7 @@
     height: 100vh;
     justify-content: center;
     align-items: center;
-    z-index: 18;
+    z-index: 101;
     background-color: transparent;
     display: flex;
     top: 0;
@@ -74,12 +74,12 @@
     background: rgba(0, 0, 0, 0) url(https://static.kleinanzeigen.de/static/img/common/viewad-gallery/close.svg) no-repeat center center;
     width: 24px;
     height: 24px;
-    z-index: 19;
+    z-index: 102;
 }
 
 #fa-dialog {
     position: fixed;
-    z-index: 18;
+    z-index: 101;
     top: 0;
     left: 0;
     width: 100vw;
